# lan-flix

./: .env.example  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-lock.txt  requirements.txt  requirements311.txt
.gitea/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 4189b6b22fed_add_fts_function_and_trigger.py  5f5e39f1bb9a_create_initial_tables.py  6f4e39f1bb9b_create_playlists_table.py
app/backend/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/frontend/: common.js  index.html  login.html  style.css
app/frontend/admin/: index.html
app/frontend/static/js/: i18n.js
app/frontend/static/locales/: en.json  ru.json
app/frontend/test/: index.html
migrations/: 0001_initial.py  0002_add_users.py
