[project]
name = "lan-flix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "tortoise-orm[asyncpg]>=0.20.0",
    "uvicorn>=0.40.0",
    "pyjwt>=2.11.0",
    "tomlkit>=0.14.0",
    "tomli_w>=1.2.0",
]

[tool.aerich]
tortoise_orm = "app.backend.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
