[project]
name = "lan-flix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.40.0",
    "pyjwt>=2.11.0",
    "tortoise-cli>=0.2.0,<0.3",
    "tortoise-orm[asyncpg]>=0.25.4",
    "tortoise>=0.1.1",
    "pwdlib[argon2]>=0.3.0",
]

[tool.tortoise]
tortoise_orm = "app.backend.database.TORTOISE_ORM"
